Creacion de canales exclusivos para dos usuarios

--- a/templates/rooms/newchat.html
+++ b/templates/rooms/newchat.html
@@ -2,7 +2,7 @@
 {% block title %}Nuevo chat | {% endblock %}
 
 {% block content %}
-
+{% include 'includes/alerts.html' %}
 <div class="p-10 text-center">
     <h1 class="text-3xl lg:text-6xl text-white">Nuevo chat</h1>
 </div>
@@ -10,7 +10,16 @@
 <form method="POST" action="{% url 'nuevochat' %}" class="lg:w-1/4 mx-auto">
     {% csrf_token %}
     <div class="mb-5">
-        <input type="text", class="w-full mt-2 px-2 py-2 rounded-xl" placeholder="Ingrese el nombre del nuevo chat", name="name">
+        <label class="text-white">Usuario invitado</label>
+        <select name="invitado"class="w-full mt-2 px-2 py-2 rounded-xl">
+            <option value="null">Selecciona al usuario</option>
+            {% for item in list_usuarios %}
+                {% if request.user == item %}
+                {% else %}
+                    <option value="{{item.username}}">{{item.username}}</option>
+                {% endif %}
+            {% endfor %}
+        </select>
     </div>
     <div class="mb-5 text-center">
         <button class="w-full mt-2 px-2 py-2 rounded-xl text-white bg-teal-800 hover:bg-teal-700">Crear</button>
