--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -5,7 +5,7 @@
     <div class="flex items-center space-x-4">
         {% if request.user.is_authenticated %}
             <small class="title text-muted">Bienvenido {{user.username}}!</small>
-            <a href="{% url 'rooms' %}" class="text-white hover:text-green-200">Rooms</a>
+            <a href="{% url 'rooms' %}" class="text-white hover:text-green-200">Chats</a>
             <a href="{% url 'logout' %}" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Salir sesion</a>
         {% else %}
             <a href="{% url 'login' %}" class="text-white hover:text-green-200">Iniciar sesion</a>
