--- a/templates/rooms/rooms.html
+++ b/templates/rooms/rooms.html
@@ -7,7 +7,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-10">
-                    <h1 class="text-3xl lg:text-6xl text-white">Rooms</h1>
+                    <h1 class="text-3xl lg:text-6xl text-white">Chats</h1>
                 </div>
                 <div class="col-sm-2">
                     <a href="{% url 'crearChat' %}" class="text-white bg-teal-600 block rounded-xl btn btn-block btn-outline-success">Nuevo chat</a>
@@ -20,12 +20,14 @@
         {% for room in rooms %}
         <div class="w-full lg:w-1/4 px-3 py-3">
             <div class="p-4 bg-white shadow rounded-xl text-center">
-                <h2 class="mb-5 text-2xl font-semibold">{{room.name}}</h2>
-                <a href="{% url 'room' room.slug %}"
-                    class="px-5 py-3 block rounded-xl text-white bg-teal-600 hover:bg-teal-700">Unirte</a>
+                {% if room.creador == request.user.username%}
+                    <h2   h2 class="mb-5 text-2xl font-semibold">{{room.invitado}}</h2>
+                {% else %}
+                    <h2   h2 class="mb-5 text-2xl font-semibold">{{room.creador}}</h2>
+                {% endif %}
+                <a href="{% url 'room' room.slug %}"class="px-5 py-3 block rounded-xl text-white bg-teal-600 hover:bg-teal-700">Unirte</a>
             </div>
         </div>
-
         {% endfor %}
     </div>
 
