--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,21 @@
 .content-header {
   padding: 15px 0.5rem;
 }
-
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: transparent;
+  background-clip: border-box;
+  border: 5px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.37rem;
+}
+.card-body {
+  flex: 1 1 auto;
+  padding: 1.25rem;
+}
 .container-fluid {
   width: 100%;
   padding-right: 7.5px;
@@ -19,14 +33,14 @@
 .form-group {
   margin-bottom: 1.2rem;
 }
-
+.float-right {
+  float: right !important;
+}
 .row {
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-right: -7.5px;
-  margin-left: -7.5px;
+  margin-right: -10px;
+  margin-left: -10px;
 }
 .content-wrapper {
   min-height: calc(100vh - calc(3.5rem + 1px) - calc(3.5rem + 1px));
@@ -34,7 +48,6 @@
 .mb-2 {
   margin-bottom: 0.5rem !important;
 }
-
 .col-md-6 {
   flex: 0 0 50%;
   max-width: 50%;
@@ -144,9 +157,6 @@
 .mx-auto {
   margin-right: auto !important;
 }
-.text-muted {
-  color: #969696 !important;
-}
 .chat-messages {
   height: 300px;
   overflow-y: auto;
@@ -164,7 +174,7 @@
   background-color: transparent;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
-  font-size: 1.5rem;
+  font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
