--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,10 +1,9 @@
 <nav class="flex items-center justify-between px-4 py-6 bg-teal-800">
     <div>
-        <a href="/" class="text-xl text-white">Dajangochat</a>
+        <a href="/" class="text-xl text-white">Dajangochat {{contador}}</a>
     </div>
     <div class="flex items-center space-x-4">
         {% if request.user.is_authenticated %}
-            <small class="title text-muted">Bienvenido {{user.username}}!</small>
             <a href="{% url 'rooms' %}" class="text-white hover:text-green-200">Chats</a>
             <a href="{% url 'logout' %}" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Salir sesion</a>
         {% else %}
