--- a/templates/rooms/rooms.html
+++ b/templates/rooms/rooms.html
@@ -10,7 +10,7 @@
                     <h1 class="text-3xl lg:text-6xl text-white">Chats</h1>
                 </div>
                 <div class="col-sm-2">
-                    <a href="{% url 'crearChat' %}" class="text-white bg-teal-600 block rounded-xl btn btn-block btn-outline-success">Nuevo chat</a>
+                    <a href="{% url 'crearChat' %}" class="text-white bg-teal-600  rounded-xl btn btn-block btn-outline-success">Nuevo chat</a>
                 </div>
             </div>
         </div><!-- /.container-fluid -->
@@ -25,7 +25,7 @@
                 {% else %}
                     <h2   h2 class="mb-5 text-2xl font-semibold">{{room.creador}}</h2>
                 {% endif %}
-                <a href="{% url 'room' room.slug %}"class="px-5 py-3 block rounded-xl text-white bg-teal-600 hover:bg-teal-700">Unirte</a>
+                <a href="{% url 'room' room.slug %}"class="px-5 py-3 block rounded-xl text-white bg-teal-600 hover:bg-teal-700">Entrar</a>
             </div>
         </div>
         {% endfor %}
