--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}Dajangochat</title>
-    <link rel="stylesheet" href="{% static './css/style.css '%}" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="{% static './css/style.css '%}"/>
     <script src="{% static './js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
     <script src="{% static './js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
     <!-- custom javascript -->
