--- a/templates/base.html
+++ b/templates/base.html
@@ -7,14 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}Dajangochat</title>
-    <link rel="stylesheet" href="{% static './css/style.css '%}"/>
+    <link href="{% static './css/style.css '%}" rel="stylesheet" type="text/css"/>
     <script src="{% static './js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
     <script src="{% static './js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
     <!-- custom javascript -->
     <script src="{% static './js/script.js' %}" type="text/javascript"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Libreria de Bootstrap table-->
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.20.0/dist/bootstrap-table.min.css">
     <script type="text/javascript">
         /// some script
         
