--- a/templates/base.html
+++ b/templates/base.html
@@ -2,37 +2,39 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}Dajangochat</title>
-    <link href="{% static './css/style.css '%}" rel="stylesheet" type="text/css"/>
-    <script src="{% static './js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
-    <script src="{% static './js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
-    <!-- custom javascript -->
-    <script src="{% static './js/script.js' %}" type="text/javascript"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script type="text/javascript">
-        /// some script
-        
-        // jquery ready start
-        $(document).ready(function() {
-            // jQuery code
-          setTimeout(function(){
-            $('#message').fadeOut('slow')
-          },2000)
-        
-        });
+  <meta charset="utf-8">
+  <meta http-equiv="pragma" content="no-cache" />
+  <meta http-equiv="cache-control" content="max-age=604800" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{% block title %}{% endblock %}Dajangochat</title>
+  <link href="{% static 'base/css/style.css '%}" rel="stylesheet" type="text/css" />
+  <script src="{% static 'base/js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'base/js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
+  <!-- custom javascript -->
+  <script src="{% static 'base/js/script.js' %}" type="text/javascript"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script type="text/javascript">
+    /// some script
+
+    // jquery ready start
+    $(document).ready(function () {
+      // jQuery code
+      setTimeout(function () {
+        $('#message').fadeOut('slow')
+      }, 2000)
+
+    });
         // jquery end
-        </script>
+  </script>
 </head>
 
 <body class="bg-teal-600">
-    <!--Nav bar-->
-    {% include 'includes/navbar.html'%}
-    {% block content %}
+  <!--Nav bar-->
+  {% include 'includes/navbar.html'%}
+  {% block content %}
 
-    {% endblock %}
-    {% block scripts %}
-    {% endblock %}
+  {% endblock %}
+  {% block scripts %}
+  {% endblock %}
