actualizacion para el deploya heroku

--- a/static/base/css/style.css
+++ b/static/base/css/style.css
@@ -4,6 +4,10 @@
   margin-right: -5px;
   margin-left: -5px;
 }
+.chat-messages {
+  height: 400px;
+  overflow-y: auto;
+}
 .content-header {
   padding: 15px 0.5rem;
 }
