--- a/templates/base.html
+++ b/templates/base.html
@@ -9,14 +9,13 @@
   <meta http-equiv="cache-control" content="max-age=604800" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock %}Dajangochat</title>
-  <link href="../static/base/css/style.css" rel="stylesheet" type="text/css"/>
+  <link href="{% static 'base/css/style.css' %}" rel="stylesheet" type="text/css"/>
   <script src="{% static 'base/js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'base/js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
   <!-- custom javascript -->
   <script src="{% static 'base/js/script.js' %}" type="text/javascript"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script type="text/javascript">
-    /// some script
 
     // jquery ready start
     $(document).ready(function () {
